# Dosithyroid

./: README.md  generator_pdf.py  pyproject.toml  requirements.txt
app/: functions.py  main.py
for_protocol_export/: generator_pdf.py  template_file.html
tests/: test_functions.py  test_main.py
